# bedrock-agentcrore-sample

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
mcp/calculator/: main.py
scripts/: refresh-tokens.sh  setup-cognito.sh  setup-env.sh  sign-in.sh
src/: config.py  requirements.txt  strands_agent_server.py
src/agents/: __init__.py  _create_strands_agent.py
test/: call_mcp.test.py  call_remote_mcp.test.py  call_remote_strands_agent.py  call_strands_agent.py  fetch_agent_card.test.py
